chore: major refactor to support nima and gradle plugins